--- a/application/index.html
+++ b/application/index.html
@@ -11,6 +11,7 @@
 luke to show a multi line git commit
 diff will look. really interesting stuff</p>
 
+<p>More shite</p>
 
 </p>Some more lines for shits and giggles</p>
 
