--- a/application/index.html
+++ b/application/index.html
@@ -11,12 +11,11 @@
 luke to show a multi line git commit
 diff will look. really interesting stuff</p>
 
-<p>More shite</p>
 
-<p>More shite</p>
+<p>Less shite</p>
 
 
-<p>More shite</p>
+<p>Less shite</p>
 
 
 </p>Some more lines for shits and giggles</p>
